...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/ll_replies"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_replies"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="9" />

                    <TextView
                        android:id="@+id/tv_load_more_replies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/text_load_more"
                        android:visibility="invisible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_empty_replies"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

...
